tests/rosetta/out/Zig/apply-a-digital-filter-direct-form-ii-transposed-.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenapply-a-digital-filter-direct-form-ii-transposed-2766133582/001/prog.zig:45:36: error: function parameter shadows declaration of 'a'
/tmp/TestMochiZigGoldenapply-a-digital-filter-direct-form-ii-transposed-2766133582/001/prog.zig:8:1: note: declared here
